2002-09-23  Junichi Uekawa  <dancer@debian.org>

	* tests/param-cn4.sh: check the -cn4 option is working.
	* tests/Makefile.am (EXTRA_DIST): add 
	* Makefile.am (TESTS): add

	* tests/param-unknown.sh: add test for unknown param
	* Makefile.am (TESTS): add
	* tests/Makefile.am (EXTRA_DIST): add.

	* parameter.c (parse_options): handle unknown option parameter properly.
	(parse_options): abort on wrong option.

2002-09-22  Junichi Uekawa  <dancer@debian.org>

	* tests/Makefile.am (EXTRA_DIST): dist target
	* Makefile.am (TESTS): add to test target
	* tests/param-f-fail.sh: add new test to check failure to -f.

	* parameter.c (read_machinelist): fail on error to 
	open the file.
	(read_machinenetgroup): fail on error.
	exit(1) on failure.

	* Makefile.am (SUBDIRS): add support for tests.
	(check_PROGRAMS): add dsh to check_PROGRAMS as well

	* tests/list.file: file list to use with -f option.

	* tests/param-m.sh: test -m option.

	* tests/param-f.sh: test -f option.

	* configure.ac: add tests/Makefile

	* tests/Makefile.am (EXTRA_DIST): create testsuite.

	* configure.ac: 0.22.0
	some new features are being added. Bump up the version.
	start debugging those features :)

	* dsh.1: document that multiple specification of 
	same machine will not be valued, and be merged into one.

	* parameter.c (machinelist_lladd): implement using llmatch.
	This fixes Debian BUG
	Bug#161845: dsh: Weak parsing of /etc/dsh/dsh.conf, and of options 
	Philippe Troin <phil@fifi.org>
	Duplicate machine entries are ignored.
	
	* linkedlist.h: add definition of llmatch

	* linkedlist.c (llmatch): string-matching routine.

	* parameter.c 
	(split_machines_list_and_add_machines, read_machinenetgroup) 
	(read_machinelist): use machinelist_lladd instead of lladd
	(machinelist_lladd): new function.

2002-09-21  Junichi Uekawa  <dancer@debian.org>

	* dsh.c (execute_rsh_single): add notes on when NOT to fork.

2002-09-20  Junichi Uekawa  <dancer@debian.org>
