@@ -11,7 +11,8 @@ TESTS=tests/param-f.sh \
 	tests/param-unknown.sh  \
 	tests/param-cn4.sh
 
-EXTRA_DIST= config.rpath $(sysconf_DATA) autogen.sh 
+EXTRA_DIST= config.rpath $(sysconf_DATA) autogen.sh \
+	$(TESTS) tests/list.file
 
 
 # Make debian pristine-source
@@ -36,6 +37,6 @@ upload-dist-all: distcheck
 	scp @PACKAGE@-@VERSION@.tar.gz mikilab.doshisha.ac.jp:parallel-research/software
 	$(MAKE) ../@PACKAGE@_@VERSION@.orig.tar.gz
 
-SUBDIRS = m4 po tests
+SUBDIRS = m4 po 
 
 ACLOCAL_AMFLAGS = -I m4
