@@ -1,3 +1,0 @@
-EXTRA_DIST=list.file param-m.sh param-f.sh param-f-fail.sh \
-	param-unknown.sh param-cn4.sh
-
